--- a/themes/hugo-clarity/layouts/partials/post-meta.html
+++ b/themes/hugo-clarity/layouts/partials/post-meta.html
@@ -5,7 +5,7 @@
       {{ .Date.Format (default "Jan 2, 2006" $.Site.Params.dateFormat) -}}
     </span>
   {{- end }}
-  {{- with .Params.tags -}}
+  {{- with .Params.tag -}}
     {{- range . }}
       {{- $tag := urlize . }}
       <a href='{{ absLangURL (printf "tags/%s" $tag) }}' class="post_tag button button_translucent">
