--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -35,9 +35,9 @@
     {{- range $key, $value := .Site.Taxonomies }}
     {{- if gt $value 0 }}
     <div>
-      <h2 class="mt-4 taxonomy" id="{{ $key }}-section">{{ T $key }}</h2>
+      <h2 class="mt-4 taxonomy" id="{{ $key }}-section">{{ $key }}</h2>
       <nav class="tags_nav">
-        {{- $onPageTags := $.Page.Params.tags }}
+        {{- $onPageTags := $.Page.Params.tag }} 
         {{- $slicedTags := ($value.ByCount | first $tagsLimit) }}
         {{- range $slicedTags }}
         <a href='{{ absLangURL $key }}/{{ (replace .Name "#" "%23") | urlize }}/' class="post_tag button button_translucent">
